# Actix-web-SQLx-PostgreSQL-TODO-API

./: .gitignore
todo-api/: Cargo.toml  roadmap.md
todo-api/migrations/: 20260216134426_create_todos.sql  20260225143952_add_deleted_at_to_todos.sql
todo-api/src/: main.rs
todo-api/src/db/: mod.rs
todo-api/src/domain/: todo.rs
todo-api/src/handlers/: todos.rs
todo-api/src/repository/: mod.rs  todo_repository.rs  todo_repository_impl.rs
todo-api/src/service/: todo_service.rs
